tree-sitter-yanxu/test/corpus/language.txt
==================
异步函数、泛型与等待
==================

异 法 求和（值：数）：数 则
    归 值 加 1；
终
定 工作：任务<数> 为 求和（41）；
言 候 工作；

---

(source_file
  (function_declaration
    (identifier)
    (parameter
      (identifier)
      (type_annotation
        (type
          (named_type
            (type_path
              (identifier))))))
    (type_annotation
      (type
        (named_type
          (type_path
            (identifier)))))
    (return_statement
      (expression
        (binary_expression
          (expression
            (identifier))
          (expression
            (number))))))
  (declaration
    (identifier)
    (type_annotation
      (type
        (generic_type
          (type_path
            (identifier))
          (type
            (named_type
              (type_path
                (identifier)))))))
    (expression
      (call_expression
        (expression
          (identifier))
        (expression
          (number)))))
  (print_statement
    (expression
      (await_expression
        (expression
          (identifier))))))

==================
协议、继承与成员
==================

协 可名 则
    域 名：文；
    法 显示（）：文；
终
类 人 纳 可名 则
    公 只 域 名：文；
    法 初始化（名：文）则 置 此.名 为 名；终
    法 显示（）：文 则 归 此.名；终
终

---

(source_file
  (protocol_declaration
    (identifier)
    (protocol_field
      (identifier)
      (type_annotation
        (type
          (named_type
            (type_path
              (identifier))))))
    (protocol_method
      (identifier)
      (type_annotation
        (type
          (named_type
            (type_path
              (identifier)))))))
  (class_declaration
    (identifier)
    (type_path
      (identifier))
    (class_member
      (field_declaration
        (member_modifiers)
        (identifier)
        (type_annotation
          (type
            (named_type
              (type_path
                (identifier)))))))
    (class_member
      (method_declaration
        (identifier)
        (parameter
          (identifier)
          (type_annotation
            (type
              (named_type
                (type_path
                  (identifier))))))
        (assignment
          (expression
            (member_expression
              (expression)
              (identifier)))
          (expression
            (identifier)))))
    (class_member
      (method_declaration
        (identifier)
        (type_annotation
          (type
            (named_type
              (type_path
                (identifier)))))
        (return_statement
          (expression
            (member_expression
              (expression)
              (identifier))))))))

==================
容器、切片与错误
==================

定 名录：列<文> 为【「子衿」，「蒹葭」】；
试 则
    言 名录【0：1】；
救 所误 则
    抛 所误；
终

---

(source_file
  (declaration
    (identifier)
    (type_annotation
      (type
        (generic_type
          (type_path
            (identifier))
          (type
            (named_type
              (type_path
                (identifier)))))))
    (expression
      (list
        (expression
          (string))
        (expression
          (string)))))
  (try_statement
    (print_statement
      (expression
        (index_expression
          (expression
            (identifier))
          (expression
            (number))
          (expression
            (number)))))
    (identifier)
    (throw_statement
      (expression
        (identifier)))))

==================
父类调用与类型判断
==================

类 鹤 承 生灵 则
    法 自述（）：文 则
        归 父.自述（） 加 「，鹤」；
    终
终
定 来客：生灵 为 鹤（）；
若 来客 是 鹤|空 则
    言 来客；
终

---

(source_file
  (class_declaration
    (identifier)
    (type_path
      (identifier))
    (class_member
      (method_declaration
        (identifier)
        (type_annotation
          (type
            (named_type
              (type_path
                (identifier)))))
        (return_statement
          (expression
            (binary_expression
              (expression
                (call_expression
                  (expression
                    (super_expression
                      (identifier)))))
              (expression
                (string))))))))
  (declaration
    (identifier)
    (type_annotation
      (type
        (named_type
          (type_path
            (identifier)))))
    (expression
      (call_expression
        (expression
          (identifier)))))
  (if_statement
    (expression
      (type_test_expression
        (expression
          (identifier))
        (type
          (union_type
            (named_type
              (type_path
                (identifier)))
            (named_type)))))
    (print_statement
      (expression
        (identifier)))))

==================
限定类型与公开重导出
==================

公 引「base.yx」为 基础；
公 类 按钮 承 基础.视图 纳 基础.可描述，协议库.可点击 则
    公 域 内容：列<基础.视图|基础.窗口?>；
终
定 根：基础.视图 为 按钮（）；
若 根 是 基础.按钮 则 言 根；终

---

(source_file
  (public_import_statement
    (string)
    (identifier))
  (class_declaration
    (identifier)
    (type_path
      (identifier)
      (identifier))
    (type_path
      (identifier)
      (identifier))
    (type_path
      (identifier)
      (identifier))
    (class_member
      (field_declaration
        (member_modifiers)
        (identifier)
        (type_annotation
          (type
            (generic_type
              (type_path
                (identifier))
              (type
                (union_type
                  (named_type
                    (type_path
                      (identifier)
                      (identifier)))
                  (nullable_type
                    (named_type
                      (type_path
                        (identifier)
                        (identifier))))))))))))
  (declaration
    (identifier)
    (type_annotation
      (type
        (named_type
          (type_path
            (identifier)
            (identifier)))))
    (expression
      (call_expression
        (expression
          (identifier)))))
  (if_statement
    (expression
      (type_test_expression
        (expression
          (identifier))
        (type
          (named_type
            (type_path
              (identifier)
              (identifier))))))
    (print_statement
      (expression
        (identifier)))))
